tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000707_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20000707-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : rec_baz = {3, 4, 5} [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn foo(%arg4: s32i, %arg5: s32i, %arg6: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i, %arg5: s32i, %arg6: s32i):
        %30 = alloca s32i, "a", align 4
        %31 = alloca s32i, "b", align 4
        %32 = alloca s32i, "c", align 4
        store %arg4, %30
        store %arg5, %31
        store %arg6, %32
        scope {
            %33 = load %30 : s32i, align 4
            %34 = const 4 : s32i
            %35 = cmp ne %33, %34 : bool
            if %35 {
                %36 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn bar(%arg0: u64i, %arg1: s32i, %arg2: s32i, %arg3: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i, %arg1: s32i, %arg2: s32i, %arg3: s32i):
        %16 = alloca rec_anon_struct, "coerce", align 8
        %17 = alloca rec_anon_struct, "coerce", align 8
        %18 = get_member %17[0] "" : u64i*
        store %arg0, %18
        %19 = get_member %17[1] "" : s32i*
        store %arg1, %19
        %20 = load %17 : rec_anon_struct
        store %20, %16
        %21 = cast(bitcast) %16 : rec_baz*
        %22 = load %21 : rec_baz
        %23 = alloca rec_baz, "x", align 4
        %24 = alloca s32i, "b", align 4
        %25 = alloca s32i, "c", align 4
        store %22, %23
        store %arg2, %24
        store %arg3, %25
        %26 = get_member %23[1] "b" : s32i*
        %27 = load %26 : s32i, align 4
        %28 = load %24 : s32i, align 4
        %29 = load %25 : s32i, align 4
        call @foo(%27, %28, %29) [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_anon_struct, "coerce", align 8
    %1 = alloca s32i, "__retval", align 4
    %2 = alloca rec_baz, "x", align 4
    %3 = const 0 : s32i
    store %3, %1
    %4 = get_global @__const.main.x : rec_baz*
    copy %2, %4
    %5 = const 1 : s32i
    %6 = const 2 : s32i
    %7 = load %2 : rec_baz, align 4
    %8 = cast(bitcast) %0 : rec_baz*
    store %7, %8
    %9 = get_member %0[0] "" : u64i*
    %10 = load %9 : u64i
    %11 = get_member %0[1] "" : s32i*
    %12 = load %11 : s32i
    call @bar(%10, %12, %5, %6) [all]
    %13 = get_global @exit : ((s32i) -> void)*
    %14 = const 0 : s32i
    call @exit(%14) [all]
    %15 = load %1 : s32i
    return %15
}
