tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000715_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000715-1.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 0 [external, default, align 4, dso_local]
global y : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn test1() -> void [external, c, no_inline, dso_local, nothrow] {
    %143 = alloca s32i, "x", align 4
    %144 = alloca s32i, "y", align 4
    %145 = const 3 : s32i
    store %145, %143, align 4
    %146 = const 2 : s32i
    store %146, %144, align 4
    scope {
        %155 = load %143 : s32i, align 4
        %156 = load %144 : s32i, align 4
        %157 = cmp lt %155, %156 : bool
        %158 = ternary %157 ? { : s32i
            %164 = load %143 : s32i, align 4
            %165 = inc %164 : s32i [nsw]
            store %165, %143, align 4
            yield %164
        } : {
            %162 = load %144 : s32i, align 4
            %163 = inc %162 : s32i [nsw]
            store %163, %144, align 4
            yield %162
        }
        %159 = const 2 : s32i
        %160 = cmp ne %158, %159 : bool
        if %160 {
            %161 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %151 = load %143 : s32i, align 4
        %152 = const 3 : s32i
        %153 = cmp ne %151, %152 : bool
        if %153 {
            %154 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %147 = load %144 : s32i, align 4
        %148 = const 3 : s32i
        %149 = cmp ne %147, %148 : bool
        if %149 {
            %150 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn test2() -> void [external, c, no_inline, dso_local, nothrow] {
    %118 = alloca s32i, "x", align 4
    %119 = alloca s32i, "y", align 4
    %120 = alloca s32i, "z", align 4
    %121 = const 3 : s32i
    store %121, %118, align 4
    %122 = const 2 : s32i
    store %122, %119, align 4
    %123 = load %118 : s32i, align 4
    %124 = load %119 : s32i, align 4
    %125 = cmp lt %123, %124 : bool
    %126 = ternary %125 ? { : s32i
        %141 = load %118 : s32i, align 4
        %142 = inc %141 : s32i [nsw]
        store %142, %118, align 4
        yield %141
    } : {
        %139 = load %119 : s32i, align 4
        %140 = inc %139 : s32i [nsw]
        store %140, %119, align 4
        yield %139
    }
    store %126, %120, align 4
    scope {
        %135 = load %120 : s32i, align 4
        %136 = const 2 : s32i
        %137 = cmp ne %135, %136 : bool
        if %137 {
            %138 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %131 = load %118 : s32i, align 4
        %132 = const 3 : s32i
        %133 = cmp ne %131, %132 : bool
        if %133 {
            %134 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %127 = load %119 : s32i, align 4
        %128 = const 3 : s32i
        %129 = cmp ne %127, %128 : bool
        if %129 {
            %130 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn test3() -> void [external, c, no_inline, dso_local, nothrow] {
    %91 = alloca s32i, "x", align 4
    %92 = alloca s32i, "y", align 4
    %93 = alloca s32i, "xx", align 4
    %94 = alloca s32i, "yy", align 4
    %95 = const 3 : s32i
    store %95, %91, align 4
    %96 = const 2 : s32i
    store %96, %92, align 4
    %97 = const 3 : s32i
    store %97, %93, align 4
    %98 = const 2 : s32i
    store %98, %94, align 4
    scope {
        %107 = load %93 : s32i, align 4
        %108 = load %94 : s32i, align 4
        %109 = cmp lt %107, %108 : bool
        %110 = ternary %109 ? { : s32i
            %116 = load %91 : s32i, align 4
            %117 = inc %116 : s32i [nsw]
            store %117, %91, align 4
            yield %116
        } : {
            %114 = load %92 : s32i, align 4
            %115 = inc %114 : s32i [nsw]
            store %115, %92, align 4
            yield %114
        }
        %111 = const 2 : s32i
        %112 = cmp ne %110, %111 : bool
        if %112 {
            %113 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %103 = load %91 : s32i, align 4
        %104 = const 3 : s32i
        %105 = cmp ne %103, %104 : bool
        if %105 {
            %106 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %99 = load %92 : s32i, align 4
        %100 = const 3 : s32i
        %101 = cmp ne %99, %100 : bool
        if %101 {
            %102 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn init_xy() -> void [internal, c, no_inline, dso_local, nothrow] {
    %87 = const 3 : s32i
    %88 = get_global @x : s32i*
    store %87, %88, align 4
    %89 = const 2 : s32i
    %90 = get_global @y : s32i*
    store %89, %90, align 4
    return
}
fn test4() -> void [external, c, no_inline, dso_local, nothrow] {
    call @init_xy() [all]
    scope {
        %72 = get_global @x : s32i*
        %73 = load %72 : s32i, align 4
        %74 = get_global @y : s32i*
        %75 = load %74 : s32i, align 4
        %76 = cmp lt %73, %75 : bool
        %77 = ternary %76 ? { : s32i
            %84 = get_global @x : s32i*
            %85 = load %84 : s32i, align 4
            %86 = inc %85 : s32i [nsw]
            store %86, %84, align 4
            yield %85
        } : {
            %81 = get_global @y : s32i*
            %82 = load %81 : s32i, align 4
            %83 = inc %82 : s32i [nsw]
            store %83, %81, align 4
            yield %82
        }
        %78 = const 2 : s32i
        %79 = cmp ne %77, %78 : bool
        if %79 {
            %80 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %67 = get_global @x : s32i*
        %68 = load %67 : s32i, align 4
        %69 = const 3 : s32i
        %70 = cmp ne %68, %69 : bool
        if %70 {
            %71 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %62 = get_global @y : s32i*
        %63 = load %62 : s32i, align 4
        %64 = const 3 : s32i
        %65 = cmp ne %63, %64 : bool
        if %65 {
            %66 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn test5() -> void [external, c, no_inline, dso_local, nothrow] {
    %35 = alloca s32i, "z", align 4
    call @init_xy() [all]
    %36 = get_global @x : s32i*
    %37 = load %36 : s32i, align 4
    %38 = get_global @y : s32i*
    %39 = load %38 : s32i, align 4
    %40 = cmp lt %37, %39 : bool
    %41 = ternary %40 ? { : s32i
        %59 = get_global @x : s32i*
        %60 = load %59 : s32i, align 4
        %61 = inc %60 : s32i [nsw]
        store %61, %59, align 4
        yield %60
    } : {
        %56 = get_global @y : s32i*
        %57 = load %56 : s32i, align 4
        %58 = inc %57 : s32i [nsw]
        store %58, %56, align 4
        yield %57
    }
    store %41, %35, align 4
    scope {
        %52 = load %35 : s32i, align 4
        %53 = const 2 : s32i
        %54 = cmp ne %52, %53 : bool
        if %54 {
            %55 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %47 = get_global @x : s32i*
        %48 = load %47 : s32i, align 4
        %49 = const 3 : s32i
        %50 = cmp ne %48, %49 : bool
        if %50 {
            %51 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %42 = get_global @y : s32i*
        %43 = load %42 : s32i, align 4
        %44 = const 3 : s32i
        %45 = cmp ne %43, %44 : bool
        if %45 {
            %46 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn test6() -> void [external, c, no_inline, dso_local, nothrow] {
    %5 = alloca s32i, "xx", align 4
    %6 = alloca s32i, "yy", align 4
    %7 = alloca s32i, "z", align 4
    %8 = const 3 : s32i
    store %8, %5, align 4
    %9 = const 2 : s32i
    store %9, %6, align 4
    call @init_xy() [all]
    %10 = load %5 : s32i, align 4
    %11 = get_global @y : s32i*
    %12 = load %11 : s32i, align 4
    %13 = cmp lt %10, %12 : bool
    %14 = ternary %13 ? { : s32i
        %32 = get_global @x : s32i*
        %33 = load %32 : s32i, align 4
        %34 = inc %33 : s32i [nsw]
        store %34, %32, align 4
        yield %33
    } : {
        %29 = get_global @y : s32i*
        %30 = load %29 : s32i, align 4
        %31 = inc %30 : s32i [nsw]
        store %31, %29, align 4
        yield %30
    }
    store %14, %7, align 4
    scope {
        %25 = load %7 : s32i, align 4
        %26 = const 2 : s32i
        %27 = cmp ne %25, %26 : bool
        if %27 {
            %28 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %20 = get_global @x : s32i*
        %21 = load %20 : s32i, align 4
        %22 = const 3 : s32i
        %23 = cmp ne %21, %22 : bool
        if %23 {
            %24 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %15 = get_global @y : s32i*
        %16 = load %15 : s32i, align 4
        %17 = const 3 : s32i
        %18 = cmp ne %16, %17 : bool
        if %18 {
            %19 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @test1() [all]
    call @test2() [all]
    call @test3() [all]
    call @test4() [all]
    call @test5() [all]
    call @test6() [all]
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
