tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000717_4.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20000717-4.c" (c, x86_64-unknown-linux-gnu)
global s : rec_anon2E0 = zero [external, default, align 4, dso_local]

fn x() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %4 = alloca s32i, "__retval", align 4
    %5 = alloca s32i, "toggle", align 4
    %6 = alloca s32i, "r", align 4
    %7 = const 0 : s32i
    store %7, %5, align 4
    %8 = load %5 : s32i, align 4
    %9 = cast(int_to_bool) %8 : bool
    %10 = not %9 : bool
    %11 = cast(bool_to_int) %10 : s32i
    %12 = cast(integral) %11 : s64i
    %13 = const 0 : s64i
    %14 = get_global @s : rec_anon2E0*
    %15 = get_member %14[1] "slot" : rec_slot[4]*
    %16 = get_element %15[%13] : rec_slot*
    %17 = get_member %16[0] "field" : s32i[6]*
    %18 = get_element %17[%12] : s32i*
    %19 = load %18 : s32i, align 4
    store %19, %6, align 4
    %20 = load %6 : s32i, align 4
    store %20, %4
    %21 = load %4 : s32i
    return %21
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
